# BookingAgent

./: .dockerignore  Dockerfile  README.md  TODO.txt  fly.toml  learnings.txt  main.py  pyproject.toml  resposne.json  scratch_pad.py
brain/: agent.py  agent_state.py
brain/llm_config/: config.py  constants.py  prompts.py
brain/tools/: config.py  slots_tool.py  time_tools.py
frontend/: app.js  index.html  styles.css
llm_config/: config.py  constants.py
notebooks/: test.ipynb
personal/: learnings.txt  technical_choices.txt
sequence_diagrams/: user_registration.mmd
server/: api.py  config.py  endpoints.py
server/db/: __init__.py  database.py  models.py
server/services/: google_calendar.py  google_oauth.py
